fixed the navbar not showing up and also formatted the main page to show cards with the products from backend.

--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -19,3 +19,22 @@
     height: 500px;
     flex-direction: row;
  }
+
+ .containers {
+   width: 25%;
+ }
+
+ .homepageContainer {
+   width: 100%;
+   height: fit-content;
+   margin-top: 150px;
+   margin-bottom: 150px;
+ }
+
+ .navbar{
+   background-color: #1b1a2ea9;
+ }
+
+ .clothe-card {
+   padding: 10px;
+ }
